manifests/my-cluster/mybackend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mybackend-deployment
  labels:
    app: my-backend
    type: backend
spec:
  template:
    metadata:
      name: mybackend-pod
      labels:
        app: myapp-backend
        type: backend
    spec:
      containers:
        - name: my-backend-container
          image: r1s07-r32:10443/jsikorsk-backend
  replicas: 4
  selector:
    matchLabels:
      type: backend
