manifests/my-cluster/myfrontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myfrontend-deployment
  labels:
    app: myapp-frontend
    type: frontend
spec:
  template:
    metadata:
      name: myfrontend-pod
      labels:
        app: myapp-frontend
        type: frontend
    spec:
      containers:
        - name: myfrontend-container
          image: r1s07-r32:10443/jsikorsk-frontend
          ports:
            - containerPort: 80
  replicas: 2
  selector:
    matchLabels:
      type: frontend
