manifests/my-cluster/myfrontend-service.yml
apiVersion: v1
kind: Service
metadata:
    name: myfrontend-service
spec:
    type: NodePort
    ports:
        - targetPort: 80
          port: 80
          nodePort: 30008
    selector:
        type: frontend
