manifests/my-cluster/redis-service.yml
kind: Service
apiVersion: v1
metadata:
  name: myredis-service
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    type: cache
